Clean exemple1.py and add -fPIC in Makefile

--- a/sources/event-brokers/nagios/neb2socket/src/Makefile
+++ b/sources/event-brokers/nagios/neb2socket/src/Makefile
@@ -6,7 +6,7 @@ INCLUDES=-I../ -I./
 SRCPATH=src
 
 CC=gcc
-MOD_CFLAGS=
+MOD_CFLAGS=-fPIC
 CFLAGS=-g -O2 -DHAVE_CONFIG_H
 MOD_LDFLAGS=-shared
 LDFLAGS=
