Fix __gxx_personality_v0 bug when module is loaded by Nagios

--- a/sources/event-brokers/nagios/neb2socket/src/Makefile
+++ b/sources/event-brokers/nagios/neb2socket/src/Makefile
@@ -8,7 +8,7 @@ SRCPATH=src
 CC=gcc
 MOD_CFLAGS=-fPIC
 CFLAGS=-g -O2 -DHAVE_CONFIG_H
-MOD_LDFLAGS=-shared
+MOD_LDFLAGS=-shared -lstdc++
 LDFLAGS=
 LIBS=
 DBG_FLAGS= -DDEBUG=1
