Add graphite support (http://graphite.wikidot.com)

--- a/sources/extra/conf/nginx.conf
+++ b/sources/extra/conf/nginx.conf
@@ -12,6 +12,7 @@ http {
 	include       @PREFIX@/etc/nginx/mime.types;
 	default_type  application/octet-stream;
 	access_log	@PREFIX@/var/log/nginx/access.log;
+	root @PREFIX@/var/www/html;
 	server_names_hash_bucket_size 64;
 	sendfile        on;
 	tcp_nopush     on;
