Comment relay options

--- a/sources/extra/conf/carbon.conf
+++ b/sources/extra/conf/carbon.conf
@@ -61,12 +61,12 @@ AMQP_METRIC_NAME_IN_BODY = True
 # with the default configuration, you have to specify a distinict
 # interfaces and ports for the listeners.
 
-[relay]
-LINE_RECEIVER_INTERFACE = 0.0.0.0
-LINE_RECEIVER_PORT = 2003
+#[relay]
+#LINE_RECEIVER_INTERFACE = 0.0.0.0
+#LINE_RECEIVER_PORT = 2003
 
-PICKLE_RECEIVER_INTERFACE = 0.0.0.0
-PICKLE_RECEIVER_PORT = 2004
+#PICKLE_RECEIVER_INTERFACE = 0.0.0.0
+#PICKLE_RECEIVER_PORT = 2004
 
 #CACHE_SERVERS = server1, server2, server3
-MAX_QUEUE_SIZE = 10000
+#MAX_QUEUE_SIZE = 10000
