--- a/sources/packages/canohome/control
+++ b/sources/packages/canohome/control
@@ -9,13 +9,18 @@ REQUIRES=""
 function install(){
 	echo "Install $NAME $VERSION-$RELEASE ..."
 	echo " + Make home directories ..."
-	$SUDO mkdir -p $PREFIX/etc/init.d $PREFIX/var/log $PREFIX/var/run $PREFIX/var/www $PREFIX/bin
+	$SUDO mkdir -p $PREFIX
 	check_code $?
 
 	echo " + Create Hypervision user ('$HUSER')..."
 	$SUDO groupadd $HGROUP &> /dev/null
 	$SUDO useradd -s /bin/bash -d $PREFIX -g $HGROUP $HUSER &> /dev/null
-	#$SUDO cp -R $SRC_PATH/extra/profile/.bash_* $PREFIX/
+
+	if [ ! -e $PREFIX/.ssh/id_dsa ]; then
+		echo " + Generate ssh keys ..."
+		$SUDO ssh-keygen -N '' -q -f $PREFIX/.ssh/id_dsa
+	fi
+
 	export PATH="$PREFIX/bin/:$PATH"
 	check_code $?
 
