Move hypervision to canopsis ...

--- a/sources/canolibs/etc/pyamqp.conf
+++ b/sources/canolibs/etc/pyamqp.conf
@@ -4,6 +4,6 @@ port = 5672
 userid = guest
 password = guest
 virtual_host = / 
-exchange_name = hypervision
+exchange_name = canopsis
 logging_level = DEBUG
 
