--- a/sources/extra/conf/rabbitmq-env.conf
+++ b/sources/extra/conf/rabbitmq-env.conf
@@ -3,5 +3,5 @@ CONFIG_FILE=@PREFIX@/etc/rabbitmq.conf
 LOG_BASE=@PREFIX@/var/log/rabbitmq
 MNESIA_BASE=@PREFIX@/var/lib/rabbitmq/mnesia
 PIDS_FILE=@PREFIX@/var/run/rabbitmq
-#NODENAME=rabbit@hypervision
+#NODENAME=rabbit@canopsis
 SERVER_START_ARGS=
