--- a/sources/packages/canohome/control
+++ b/sources/packages/canohome/control
@@ -12,7 +12,7 @@ function install(){
 	$SUDO mkdir -p $PREFIX
 	check_code $?
 
-	echo " + Create Hypervision user ('$HUSER')..."
+	echo " + Create Canopsis user ('$HUSER')..."
 	$SUDO groupadd $HGROUP &> /dev/null
 	$SUDO useradd -s /bin/bash -d $PREFIX -g $HGROUP $HUSER &> /dev/null
 
