--- a/sources/packages/canohome/control
+++ b/sources/packages/canohome/control
@@ -15,6 +15,7 @@ function install(){
 	echo " + Create Canopsis user ('$HUSER')..."
 	$SUDO groupadd $HGROUP &> /dev/null
 	$SUDO useradd -s /bin/bash -d $PREFIX -g $HGROUP $HUSER &> /dev/null
+	$SUDO usermod -a -G nagios $HUSER &> /dev/null
 
 	if [ ! -e $PREFIX/.ssh/id_dsa ]; then
 		echo " + Generate ssh keys ..."
