--- a/sources/canolibs/etc/camqp.conf
+++ b/sources/canolibs/etc/camqp.conf
@@ -3,7 +3,7 @@ host = 127.0.0.1
 port = 5672
 userid = guest
 password = guest
-virtual_host = / 
+virtual_host = canopsis 
 exchange_name = canopsis
 logging_level = DEBUG
 
