--- a/sources/extra/conf/carbon.conf
+++ b/sources/extra/conf/carbon.conf
@@ -52,6 +52,7 @@ AMQP_PASSWORD = guest
 # the network settings for the amqp server
 AMQP_HOST = localhost
 AMQP_PORT = 5672
+AMQP_VHOST = canopsis
 
 # if you want to include the metric name as part of the message body
 # instead of as the routing key, set this to True
