Remove eventsource. before RK

--- a/sources/extra/conf/dashboard.conf
+++ b/sources/extra/conf/dashboard.conf
@@ -36,7 +36,7 @@ refresh_interval = 60
 #brand.label = Brand
 
 [All]
-scheme = eventsource.nagios.<eventsource>.check.service.<hostname>.<service>
+scheme = nagios.<eventsource>.check.service.<hostname>.<service>
 eventsource.label = Event Source
 hostname.label = Host Name
 service.label = Service Name
