Refactoring of daemon script ...

--- a/sources/amqp2brule/etc/daemon.d/amqp2brule.conf
+++ b/sources/amqp2brule/etc/daemon.d/amqp2brule.conf
@@ -1,5 +1,3 @@
-[daemon]
-path = ~/opt/amqp2brule/amqp2brule.py
-start = True
-nb_process = 1
-detach_process = True
+START=1
+APP_BIN=~/opt/amqp2brule/amqp2brule.py
+NB_PROC=1
