--- a/sources/amqp2graphite/etc/daemon.d/amqp2graphite.conf
+++ b/sources/amqp2graphite/etc/daemon.d/amqp2graphite.conf
@@ -1,5 +1,3 @@
-[daemon]
-path = ~/opt/amqp2graphite/amqp2graphite.py
-start = True
-nb_process = 1
-detach_process = True
+START=1
+APP_BIN=~/opt/amqp2graphite/amqp2graphite.py
+NB_PROC=1
