--- a/sources/amqp2perfstore/etc/daemon.d/amqp2perfstore.conf
+++ b/sources/amqp2perfstore/etc/daemon.d/amqp2perfstore.conf
@@ -1,5 +1,3 @@
-[daemon]
-path = ~/opt/amqp2perfstore/amqp2perfstore.py
-start = True
-nb_process = 1
-detach_process = True
+START=1
+APP_BIN=~/opt/amqp2perfstore/amqp2perfstore.py
+NB_PROC=1
