--- a/sources/nagios2amqp/etc/daemon.d/nagios2amqp.conf
+++ b/sources/nagios2amqp/etc/daemon.d/nagios2amqp.conf
@@ -1,5 +1,3 @@
-[daemon]
-path = ~/opt/nagios2amqp/nagios2amqp.py
-start = True
-nb_process = 1
-detach_process = True
+START=1
+APP_BIN=~/opt/nagios2amqp/nagios2amqp.py
+NB_PROC=1
