--- a/sources/sla2mongodb/etc/daemon.d/sla2mongodb.conf
+++ b/sources/sla2mongodb/etc/daemon.d/sla2mongodb.conf
@@ -1,5 +1,3 @@
-[daemon]
-path = ~/opt/sla2mongodb/sla2mongodb.py
-start = True
-nb_process = 1
-detach_process = True
+START=1
+APP_BIN=~/opt/sla2mongodb/sla2mongodb.py
+NB_PROC=1
