--- a/sources/amqp2mongodb/etc/daemon.d/amqp2mongodb.conf
+++ b/sources/amqp2mongodb/etc/daemon.d/amqp2mongodb.conf
@@ -1,5 +1,3 @@
-[daemon]
-path = ~/opt/amqp2mongodb/amqp2mongodb.py
-start = True
-nb_process = 1
-detach_process = True
+START=1
+APP_BIN=~/opt/amqp2mongodb/amqp2mongodb.py
+NB_PROC=1
