For new daemon script ...

--- a/sources/graphite_webserver/etc/daemon.d/graphite_webserver.conf
+++ b/sources/graphite_webserver/etc/daemon.d/graphite_webserver.conf
@@ -1,5 +1,3 @@
-[daemon]
-path = ~/opt/graphite/graphite_webserver.py
-start = True
-nb_process = 1
-detach_process = True
+START=1
+APP_BIN=~/opt/graphite/graphite_webserver.py
+NB_PROC=1
