--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -1,4 +1,6 @@
-#!/bin/bash
-
-REPO_URL="http://localhost:8000/canopsis"
-REPO_VER="daily"
+REPO_URL="http://localhost:8000"
+REPO_BASE="canopsis"
+REPO_VERS="daily"
+ARCH=$ARCH
+DIST=$DIST
+DIST_VERS=$DIST_VERS
