--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -1,5 +1,5 @@
-REPO_URL="http://localhost:8000"
-REPO_BASE="canopsis"
+REPO_URL="http://repo.canopsis.org:80"
+REPO_BASE=""
 REPO_VERS="daily"
 ARCH=$ARCH
 DIST=$DIST
