Fix many bugs in pkgmgr

--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -4,3 +4,9 @@ REPO_VERS="daily"
 ARCH=$ARCH
 DIST=$DIST
 DIST_VERS=$DIST_VERS
+
+VARLIB_PATH="$HOME/var/lib/pkgmgr"
+PACKAGES_PATH=$VARLIB_PATH/packages
+LOCAL_DB_PATH=$VARLIB_PATH/local_db
+REMOTE_DB_PATH=$VARLIB_PATH/remote_db
+LOG_PATH=$HOME/var/log/pkgmgr.log
