--- a/sources/packages/canohome/control
+++ b/sources/packages/canohome/control
@@ -1,13 +1,14 @@
 #!/bin/bash
 
 NAME="canohome"
-VERSION=1
+VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
 REQUIRES=""
 
-function install(){
-	echo "Install $NAME $VERSION-$RELEASE ..."
+
+function pre_install(){
+	echo "Pre-install $NAME $VERSION-$RELEASE ..."
 	echo " + Make home directories ..."
 	$SUDO mkdir -p $PREFIX
 	check_code $?
@@ -17,7 +18,10 @@ function install(){
 	$SUDO groupadd $HGROUP &> /dev/null
 	$SUDO useradd -s /bin/bash -d $PREFIX -g $HGROUP $HUSER &> /dev/null
 	$SUDO usermod -a -G nagios $HUSER &> /dev/null
+}
 
+function post_install(){
+	echo "Post-install $NAME $VERSION-$RELEASE ..."
 	if [ ! -e $PREFIX/.ssh/id_dsa ]; then
 		echo " + Generate ssh keys ..."
 		$SUDO ssh-keygen -N '' -q -f $PREFIX/.ssh/id_dsa
@@ -31,10 +35,25 @@ function install(){
 	check_code $?
 }
 
-function remove(){
-	echo "Remove $NAME $VERSION-$RELEASE ..."
+function pre_remove(){
+	echo "Pre-remove $NAME $VERSION-$RELEASE ..."
+	check_code $?
+}
+
+function post_remove(){
+	echo "Post-remove $NAME $VERSION-$RELEASE ..."
 	echo " + Del user $HUSER ..."
 	$SUDO userdel $HUSER
+	check_code $?
+}
+
+function pre_update(){
+	echo "Pre-update $NAME $VERSION-$RELEASE ..."
+	check_code $?
+}
+
+function post_update(){
+	echo "Post-update $NAME $VERSION-$RELEASE ..."
 	check_code $?
 }
 
@@ -43,8 +62,4 @@ function purge(){
 	echo " + Remove $PREFIX ..."
 	$SUDO rm -Rf $PREFIX
 	check_code $?
-}
-
-function update(){
-	echo "Update $NAME $VERSION-$RELEASE ..."
 }
