--- a/sources/packages/nagios2amqp/control
+++ b/sources/packages/nagios2amqp/control
@@ -1,27 +1,42 @@
 #!/bin/bash
 
 NAME="nagios2amqp"
-VERSION=1
+VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
 REQUIRES="canohome pkgmgr neb2socket"
 
-function install(){
-	echo "Install $NAME $VERSION-$RELEASE ..."
+function pre_install(){
+	echo "Pre-install $NAME $VERSION-$RELEASE ..."
+	check_code $? 
+}
+
+function post_install(){
+	eho "Post-install $NAME $VERSION-$RELEASE ..."
+	check_code $? 
+}
+
+function pre_remove(){
+	echo "Pre-remove $NAME $VERSION-$RELEASE ..."
 	check_code $?
 }
 
-function remove(){
-	echo "Remove $NAME $VERSION-$RELEASE ..."
+function post_remove(){
+	echo "Post-remove $NAME $VERSION-$RELEASE ..."
+	check_code $?
+}
+
+function pre_update(){
+	echo "Pre-update $NAME $VERSION-$RELEASE ..."
+	check_code $?
+}
+
+function post_update(){
+	echo "Post-update $NAME $VERSION-$RELEASE ..."
 	check_code $?
 }
 
 function purge(){
 	echo "Purge $NAME $VERSION-$RELEASE ..."
-	check_code $?
-}
-
-function update(){
-	echo "Update $NAME $VERSION-$RELEASE ..."
 	check_code $?
 }
