--- a/sources/packages/pkgmgr/control
+++ b/sources/packages/pkgmgr/control
@@ -1,19 +1,39 @@
 #!/bin/bash
 
 NAME="pkgmgr"
-VERSION=1
+VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
 REQUIRES="canohome"
 
-function install(){
-	echo "Install $NAME $VERSION-$RELEASE ..."
+function pre_install(){
+	echo "Pre-install $NAME $VERSION-$RELEASE ..."
+	check_code $? 
+}
+
+function post_install(){
+	echo "Post-install $NAME $VERSION-$RELEASE ..."
 	mkdir -p $PREFIX/var/lib/pkgmgr/packages
+	check_code $? 
+}
+
+function pre_remove(){
+	echo "Pre-remove $NAME $VERSION-$RELEASE ..."
 	check_code $?
 }
 
-function remove(){
-	echo "Remove $NAME $VERSION-$RELEASE ..."
+function post_remove(){
+	echo "Post-remove $NAME $VERSION-$RELEASE ..."
+	check_code $?
+}
+
+function pre_update(){
+	echo "Pre-update $NAME $VERSION-$RELEASE ..."
+	check_code $?
+}
+
+function post_update(){
+	echo "Post-update $NAME $VERSION-$RELEASE ..."
 	check_code $?
 }
 
@@ -23,10 +43,4 @@ function purge(){
 	rm -Rf $PREFIX/var/lib/pkgmgr/local_db
 	rm -Rf $PREFIX/var/lib/pkgmgr/remote_db
 	rm -Rf $PREFIX/var/log/pkgmgr
-	#check_code $?
-}
-
-function update(){
-	echo "Update $NAME $VERSION-$RELEASE ..."
-	check_code $?
 }
