--- a/sources/packages/rabbitmq-server/control
+++ b/sources/packages/rabbitmq-server/control
@@ -12,7 +12,7 @@ function pre_install(){
 }
 
 function post_install(){
-	eho "Post-install $NAME $VERSION-$RELEASE ..."
+	echo "Post-install $NAME $VERSION-$RELEASE ..."
 
 	mkdir -p $PREFIX/var/lib/rabbitmq $PREFIX/var/log/rabbitmq
 	$PREFIX/etc/init.d/rabbitmq-server start
