--- a/sources/packages/mongodb/control
+++ b/sources/packages/mongodb/control
@@ -12,7 +12,7 @@ function pre_install(){
 }
 
 function post_install(){
-	eho "Post-install $NAME $VERSION-$RELEASE ..."
+	echo "Post-install $NAME $VERSION-$RELEASE ..."
 	mkdir -p $PREFIX/var/log/mongodb
 	mkdir -p $PREFIX/var/lib/mongodb
 	check_code $?
