--- a/sources/mongodb/etc/mongodb.conf
+++ b/sources/mongodb/etc/mongodb.conf
@@ -5,10 +5,10 @@
 # Note: if you run mongodb as a non-root user (recommended) you may
 # need to create and set permissions for this directory manually,
 # e.g., if the parent directory isn't mutable by the mongodb user.
-dbpath=@PREFIX@/var/lib/mongodb
+dbpath=~/var/lib/mongodb
 
 #where to log
-logpath=@PREFIX@/var/log/mongodb/mongodb.log
+logpath=~/var/log/mongodb/mongodb.log
 
 logappend=true
 
