--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -5,6 +5,8 @@ ARCH=$ARCH
 DIST=$DIST
 DIST_VERS=$DIST_VERS
 
+PKG_BLACKLIST="canohome canotools canolibs pkgmgr"
+
 VARLIB_PATH="$HOME/var/lib/pkgmgr"
 PACKAGES_PATH=$VARLIB_PATH/packages
 LOCAL_DB_PATH=$VARLIB_PATH/local_db
