--- a/sources/packages/canohome/control
+++ b/sources/packages/canohome/control
@@ -23,10 +23,17 @@ function pre_install(){
 	chmod 400 $PREFIX/etc/uuid
 
 	echo " + Create Canopsis user ('$HUSER')..."
-	userdel $HUSER &> /dev/null || true
 	groupadd $HGROUP &> /dev/null || true
-	useradd -s /bin/bash -d $PREFIX -g $HGROUP $HUSER &> /dev/null
-	usermod -a -G nagios $HUSER &> /dev/null || true
+	id canopsis &> /dev/null
+	if [ $? -ne 0 ]; then
+		userdel $HUSER &> /dev/null || true
+		useradd -s /bin/bash -d $PREFIX -g $HGROUP $HUSER &> /dev/null
+		usermod -a -G nagios $HUSER &> /dev/null || true
+	else
+		echo "   + Allready exist, set home and group ..."
+		usermod -d $PREFIX $HUSER
+		usermod -g $HGROUP $HUSER
+	fi
 }
 
 function post_install(){
