Dependencies feature for pkgmgr

--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -12,3 +12,5 @@ PACKAGES_PATH=$VARLIB_PATH/packages
 LOCAL_DB_PATH=$VARLIB_PATH/local_db
 REMOTE_DB_PATH=$VARLIB_PATH/remote_db
 LOG_PATH=$HOME/var/log/pkgmgr.log
+TMP_FILE=$VARLIB_PATH/tmp.file
+LOCK_FILE=$VARLIB_PATH/lock.file
