--- a/sources/packages/amqp2mongodb/control
+++ b/sources/packages/amqp2mongodb/control
@@ -4,7 +4,7 @@ NAME="amqp2mongodb"
 VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES=""
+REQUIRES="canohome python canolibs"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
