--- a/sources/packages/canotools/control
+++ b/sources/packages/canotools/control
@@ -4,7 +4,7 @@ NAME="canotools"
 VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="canohome pkgmgr"
+REQUIRES="canohome python canolibs"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
