--- a/sources/packages/nagios2amqp/control
+++ b/sources/packages/nagios2amqp/control
@@ -4,7 +4,7 @@ NAME="nagios2amqp"
 VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="canohome pkgmgr neb2socket"
+REQUIRES="canohome python canolibs neb2socket"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
