--- a/sources/packages/python/control
+++ b/sources/packages/python/control
@@ -4,7 +4,7 @@ NAME="python"
 VERSION=2.7.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="canohome pkgmgr"
+REQUIRES="canohome"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
