--- a/sources/packages/rabbitmq-server/control
+++ b/sources/packages/rabbitmq-server/control
@@ -4,7 +4,7 @@ NAME="rabbitmq-server"
 VERSION=2.4.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="canohome pkgmgr erlang canotools"
+REQUIRES="canohome erlang"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
