--- a/sources/packages/webcore/control
+++ b/sources/packages/webcore/control
@@ -4,7 +4,7 @@ NAME="webcore"
 VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES=""
+REQUIRES="canohome python canolibs"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
