--- a/sources/packages/amqp2perfstore/control
+++ b/sources/packages/amqp2perfstore/control
@@ -4,7 +4,7 @@ NAME="amqp2perfstore"
 VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="canohome python canolibs"
+REQUIRES="canohome pkgmgr python canolibs"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
