--- a/sources/packages/neb2socket/control
+++ b/sources/packages/neb2socket/control
@@ -4,7 +4,7 @@ NAME="neb2socket"
 VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="canohome"
+REQUIRES="canohome pkgmgr"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
