--- a/sources/packages/cnagios/control
+++ b/sources/packages/cnagios/control
@@ -1,10 +1,10 @@
 #!/bin/bash
 
-NAME="cmaster"
+NAME="cnagios"
 VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="canohome pkgmgr amqp2brule amqp2mongodb amqp2perfstore canolibs canotools ccli clock2amqp erlang mongodb python rabbitmq-server sla2mongodb webcore"
+REQUIRES="canohome pkgmgr python canolibs nagios2amqp neb2socket"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
