Wait preallocating journal file

--- a/sources/packages/mongodb/control
+++ b/sources/packages/mongodb/control
@@ -20,9 +20,10 @@ function post_install(){
 	launch_cmd "service mongodb start"
 
 	## Wait mongo ready
+	echo "Wait mongoDB (preallocating a journal file) please wait ..."
         i=0
         while [ `ls /tmp/mongodb-*.sock 2> /dev/null| wc -l` -eq 0 ]; do
-                if [ $i -gt 30 ]; then
+                if [ $i -gt 120 ]; then
                         echo 
                         echo "Impossible to connect mongoDB ..."
                         exit 1
