Rm sock before start

--- a/sources/packages/mongodb/control
+++ b/sources/packages/mongodb/control
@@ -17,6 +17,9 @@ function post_install(){
 	mkdir -p $PREFIX/var/lib/mongodb
 	chown $HUSER -R $PREFIX/var/log/mongodb
 	chown $HUSER -R $PREFIX/var/lib/mongodb
+	
+	rm /tmp/mongodb-*.sock &> /dev/null || true
+
 	launch_cmd "service mongodb start"
 
 	## Wait mongo ready
