Listen on all interfaces

--- a/sources/extra/conf/rabbitmq-env.conf
+++ b/sources/extra/conf/rabbitmq-env.conf
@@ -4,4 +4,5 @@ LOG_BASE=@PREFIX@/var/log/rabbitmq
 MNESIA_BASE=@PREFIX@/var/lib/rabbitmq/mnesia
 PIDS_FILE=@PREFIX@/var/run/rabbitmq
 #NODENAME=rabbit@canopsis
+NODE_IP_ADDRESS=0.0.0.0
 SERVER_START_ARGS=
