--- a/sources/packages/rabbitmq-server/control
+++ b/sources/packages/rabbitmq-server/control
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 NAME="rabbitmq-server"
-VERSION=2.4.1
+VERSION=2.7.0
 RELEASE=0
 DESCRIPTION=""
 REQUIRES="canohome pkgmgr erlang"
@@ -14,18 +14,31 @@ function pre_install(){
 function post_install(){
 	echo "Post-install $NAME $VERSION-$RELEASE ..."
 
-	mkdir -p $PREFIX/var/lib/rabbitmq $PREFIX/var/log/rabbitmq
-	$PREFIX/etc/init.d/rabbitmq-server start
+	launch_cmd "service rabbitmq-server start"
+
+	echo "Safe wait ..."
+	sleep 3
+
+	CODE=0
 
 	echo " + Declare Admin user ..."
-	$PREFIX/bin/rabbitmqadmin declare user name=admin password=admin administrator=true
+	$PREFIX/bin/rabbitmqadmin declare user name=admin password=admin tags=administrator
+	RCODE=$?
+	if [ $RCODE -ne 0 ]; then CODE=$RCODE; fi
+
 	echo " + Declare vhost ..."
 	$PREFIX/bin/rabbitmqadmin declare vhost name=canopsis
+	RCODE=$?
+	if [ $RCODE -ne 0 ]; then CODE=$RCODE; fi
+
 	echo " + Declare permissions for guest user ..."
 	$PREFIX/bin/rabbitmqadmin -V canopsis declare permission vhost=canopsis user=guest configure=".*" write=".*" read=".*"
+	RCODE=$?
+	if [ $RCODE -ne 0 ]; then CODE=$RCODE; fi
 
-	$PREFIX/etc/init.d/rabbitmq-server stop
-	check_code $?
+	launch_cmd "service rabbitmq-server stop"
+
+	check_code $CODE "Error in rabbitMQ configurations ..."
 }
 
 function pre_remove(){
