--- a/sources/rabbitmq-server/etc/rabbitmq/rabbitmq-env.conf
+++ b/sources/rabbitmq-server/etc/rabbitmq/rabbitmq-env.conf
@@ -1,7 +1,7 @@
 SCRIPT_DIR=$HOME/bin/
 RABBITMQ_HOME=$HOME
 RABBITMQ_ENABLED_PLUGINS_FILE=$HOME/etc/rabbitmq/enabled_plugins
-RABBITMQ_ENABLED_PLUGINS_DIR=$HOME/opt/rabbitmq-server/plugins
+RABBITMQ_PLUGINS_DIR=$HOME/opt/rabbitmq-server/plugins
 
 RABBITMQ_CONFIG_FILE=$HOME/etc/rabbitmq/rabbitmq.config
 RABBITMQ_LOG_BASE=$HOME/var/log/rabbitmq
