--- a/sources/packages/pyperfstore/control
+++ b/sources/packages/pyperfstore/control
@@ -13,7 +13,14 @@ function pre_install(){
 
 function post_install(){
 	echo "Post-install $NAME $VERSION-$RELEASE ..."
-	check_code $? 
+
+	mkdir -p $PREFIX/tmp
+
+	launch_cmd "cd $PREFIX/tmp && tar xfz $NAME.tgz"
+        check_code $? "Impossible to extract archive"
+
+        launch_cmd "cd $PREFIX/tmp/$NAME && python setup.py install"
+        check_code $? "Setup.py install failure"
 }
 
 function pre_remove(){
