--- a/sources/packages/pyperfstore/control
+++ b/sources/packages/pyperfstore/control
@@ -16,10 +16,10 @@ function post_install(){
 
 	mkdir -p $PREFIX/tmp
 
-	launch_cmd "cd $PREFIX/tmp && tar xfz $NAME.tgz"
+	launch_cmd "cd $PREFIX/tmp; tar xfz $NAME.tgz"
         check_code $? "Impossible to extract archive"
 
-        launch_cmd "cd $PREFIX/tmp/$NAME && python setup.py install"
+        launch_cmd "cd $PREFIX/tmp/$NAME; python setup.py install"
         check_code $? "Setup.py install failure"
 }
 
