Use new launch_cmd

--- a/sources/packages/python/control
+++ b/sources/packages/python/control
@@ -11,8 +11,7 @@ function pre_install(){
 	path_file="$PREFIX/lib/python2.7/site-packages/easy-install.pth"
 	if [ -e "$path_file" ]; then
 		tmp_file=$(mktemp --tmpdir="$PREFIX/tmp")
-		launch_cmd "cp $path_file $tmp_file"
-		check_code $? "Error during backup easy-install.pt file"
+		launch_cmd 1 cp $path_file $tmp_file
 		patch="$tmp_file.patch"
 	fi
 }
@@ -20,11 +19,9 @@ function pre_install(){
 function post_install(){
 	echo "Post-install $NAME $VERSION-$RELEASE ..."
 	if [[ -e "$path_file" && -e "$tmp_file" ]]; then
-		launch_cmd "diff $path_file $tmp_file > $patch"
-		check_code $? "Error during diff command"
-		launch_cmd "patch $path_file $path"
-		check_code $? "Error during patch command"
-		launch_cmd "rm -Rf $tmp_file"	
+		launch_cmd 1 diff $path_file $tmp_file > $patch
+		launch_cmd 1 patch $path_file $path
+		launch_cmd 1 rm -Rf $tmp_file
 	fi
 }
 
