--- a/sources/packages/mongodb/control
+++ b/sources/packages/mongodb/control
@@ -20,10 +20,10 @@ function post_install(){
 	
 	rm /tmp/mongodb-*.sock &> /dev/null || true
 
-	launch_cmd "true" service mongodb start
+	launch_cmd 1 service mongodb start
 
 	## Wait mongo ready
-	echo "Wait mongoDB (preallocating journal file...), You can take a coffe ..."
+	echo "Wait mongoDB (preallocating journal file...), You can take a coffee ..."
         i=0
         while [ `ls /tmp/mongodb-*.sock 2> /dev/null| wc -l` -eq 0 ]; do
                 if [ $i -gt 1200 ]; then
@@ -37,8 +37,8 @@ function post_install(){
         done
         echo
 
-	launch_cmd "true" python $PREFIX/opt/mongodb/initDB.py
-	launch_cmd "true" service mongodb stop
+	launch_cmd 1 python $PREFIX/opt/mongodb/initDB.py
+	launch_cmd 1 service mongodb stop
 
 	check_code $? "Impossible to init mongoDB ..."
 }
