--- a/sources/packages/pyperfstore/control
+++ b/sources/packages/pyperfstore/control
@@ -16,8 +16,8 @@ function post_install(){
 
 	mkdir -p $PREFIX/tmp
 
-	launch_cmd 1 cd $PREFIX/tmp; tar xfz $NAME.tgz
-        launch_cmd 1 cd $PREFIX/tmp/$NAME; python setup.py install
+	launch_cmd 1 cd tar xfz $PREFIX/tmp/$NAME.tgz -C /opt/canopsis/tmp/
+        launch_cmd 1 "cd $PREFIX/tmp/$NAME && python setup.py install"
 }
 
 function pre_remove(){
