Remove canolibs of blacklist

--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -5,7 +5,7 @@ ARCH=$ARCH
 DIST=$DIST
 DIST_VERS=$DIST_VERS
 
-PKG_BLACKLIST="canohome canotools canolibs pkgmgr"
+PKG_BLACKLIST="canohome canotools pkgmgr"
 
 VARLIB_PATH="$HOME/var/lib/pkgmgr"
 PACKAGES_PATH=$VARLIB_PATH/packages
