--- a/sources/packages/canohome/control
+++ b/sources/packages/canohome/control
@@ -6,6 +6,8 @@ RELEASE=0
 DESCRIPTION=""
 REQUIRES=""
 
+NO_ARCH=true
+NO_DIST=true
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
