--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -11,6 +11,6 @@ VARLIB_PATH="$HOME/var/lib/pkgmgr"
 PACKAGES_PATH=$VARLIB_PATH/packages
 LOCAL_DB_PATH=$VARLIB_PATH/local_db
 REMOTE_DB_PATH=$VARLIB_PATH/remote_db
-LOG_PATH=$HOME/var/log/pkgmgr.log
+LOG_FILE=$HOME/var/log/pkgmgr.log
 TMP_FILE=$VARLIB_PATH/tmp.file
 LOCK_FILE=$VARLIB_PATH/lock.file
