Try to fix trap error

--- a/sources/packages/mongodb/control
+++ b/sources/packages/mongodb/control
@@ -27,7 +27,7 @@ function post_install(){
 	## Wait mongo ready
 	echo "Wait mongoDB (preallocating journal file...), You can take a coffee ..."
         i=0
-        while [ `ls /tmp/mongodb-*.sock 2> /dev/null| wc -l` -eq 0 ]; do
+        while [ `ls /tmp/mongodb-*.sock 2> /dev/null| wc -l || true` -eq 0 ]; do
                 if [ $i -gt 1200 ]; then
                         echo 
                         echo "Timeout, Impossible to connect mongoDB ..."
