fix: neb2amqp Makefile + linker

--- a/sources/neb2amqp/Makefile
+++ b/sources/neb2amqp/Makefile
@@ -2,9 +2,12 @@
 # Makefile for NEB2amqp
 ###################################
 
-all: clean neb2amqp.o
+all: clean neb2amqp.o librabbitmq.la
 
-neb2amqp.o:
+librabbitmq.la:
+	cd lib/rabbitmq-c && autoreconf -i && ./configure && make
+
+neb2amqp.o: librabbitmq.la
 	cd src && make
 
 clean:
