--- a/sources/neb2amqp/src/Makefile
+++ b/sources/neb2amqp/src/Makefile
@@ -9,7 +9,7 @@ CC=gcc
 MOD_CFLAGS=-fPIC
 CFLAGS=-g -O2 -DHAVE_CONFIG_H
 MOD_LDFLAGS=-shared -lstdc++
-LDFLAGS=
+LDFLAGS=-L../lib/rabbitmq-c/librabbitmq/librabbitmq.la
 LIBS=
 DBG_FLAGS=-DDEBUG=1
 
@@ -17,7 +17,10 @@ CP=@CP@
 
 all: clean neb2amqp.o
 
-neb2amqp.o:
+../lib/rabbitmq-c/librabbitmq/librabbitmq.la:
+	echo "Build librabbitmq first!" && exit 1
+
+neb2amqp.o: ../lib/rabbitmq-c/librabbitmq/librabbitmq.la
 	$(CC) $(MOD_LDFLAGS) $(MOD_CFLAGS) $(CFLAGS) -o $@ module.c logger.c broker.c events.c json.c amqp.c strutil.cc $(LDFLAGS) $(LIBS) $(INCLUDES)
 
 clean:
