New celery package with wkhtmltopdf and fix pkgmgr bug

--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -5,6 +5,13 @@ ARCH=$ARCH
 DIST=$DIST
 DIST_VERS=$DIST_VERS
 
+# Log levels
+#   - INFO      (1)
+#   - ERR       (2)
+#   - VERBOSE   (3)
+#   - DEBUG     (4)
+LOG=2
+
 PKG_BLACKLIST="canohome canotools pkgmgr"
 
 VARLIB_PATH="$HOME/var/lib/pkgmgr"
