--- a/sources/packages/celery/control
+++ b/sources/packages/celery/control
@@ -1,19 +1,19 @@
 #!/bin/bash
 
-NAME="wkhtmltopdf"
-VERSION="0.11.0_rc1"
+NAME="celery"
+VERSION=2.4.6
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="celery"
+REQUIRES="canohome pkgmgr python rabbitmq-server"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
-	check_code $? 
+	check_code $?
 }
 
 function post_install(){
 	echo "Post-install $NAME $VERSION-$RELEASE ..."
-	check_code $? 
+	check_code $?
 }
 
 function pre_remove(){
