--- a/sources/packages/celery/control
+++ b/sources/packages/celery/control
@@ -13,7 +13,7 @@ function pre_install(){
 
 function post_install(){
 	echo "Post-install $NAME $VERSION-$RELEASE ..."
-	check_code $?
+	check_code $? "easy_install failed"
 }
 
 function pre_remove(){
@@ -23,7 +23,10 @@ function pre_remove(){
 
 function post_remove(){
 	echo "Post-remove $NAME $VERSION-$RELEASE ..."
-	check_code $?
+	launch_cmd 1 easy_install -mxN $NAME
+	launch_cmd 1 rm -rf $PREFIX/lib/python2.7/site-packages/$NAME-$VERSION*.egg
+	update_pylibs
+	check_code $? "Remove $NAME egg failed"
 }
 
 function pre_update(){
