--- a/sources/packages/python-libs/control
+++ b/sources/packages/python-libs/control
@@ -1,10 +1,10 @@
 #!/bin/bash
 
-NAME="python"
-VERSION=2.7.1
+NAME="python-libs"
+VERSION=0.1
 RELEASE=0
 DESCRIPTION=""
-REQUIRES="canohome pkgmgr"
+REQUIRES="canohome pkgmgr python"
 
 function pre_install(){
 	echo "Pre-install $NAME $VERSION-$RELEASE ..."
@@ -13,6 +13,7 @@ function pre_install(){
 
 function post_install(){
 	echo "Post-install $NAME $VERSION-$RELEASE ..."
+	update_pylibs
 	check_code $?
 }
 
