--- a/sources/packages/python/control
+++ b/sources/packages/python/control
@@ -7,25 +7,13 @@ DESCRIPTION=""
 REQUIRES="canohome pkgmgr"
 
 function pre_install(){
-    echo "Pre-install $NAME $VERSION-$RELEASE ..."
-    path_file="$PREFIX/lib/python2.7/site-packages/easy-install.pth"
-    if [ -e "$path_file" ]; then
-        tmp_file=$(launch_cmd 1 mktemp --tmpdir="$PREFIX/tmp")
-        echo "Backup easy-install.pth file"
-        launch_cmd 1 cp $path_file $tmp_file
-        patch="$tmp_file.patch"
-    fi
+	echo "Pre-install $NAME $VERSION-$RELEASE ..."
+	check_code $?
 }
 
 function post_install(){
-    echo "Post-install $NAME $VERSION-$RELEASE ..."
-    if [[ -e "$path_file" && -e "$tmp_file" ]]; then
-        echo "Diff new easy-install.pth file with backup"
-        launch_cmd 0 diff $path_file $tmp_file > $patch
-        echo "Patch the new file with easy-install.pth file"
-        launch_cmd 1 patch $path_file $patch
-        launch_cmd 1 rm -Rf $tmp_file*
-    fi
+	echo "Post-install $NAME $VERSION-$RELEASE ..."
+	check_code $?
 }
 
 function pre_remove(){
