Change default repo in pkgmgr.conf

--- a/sources/pkgmgr/etc/pkgmgr.conf
+++ b/sources/pkgmgr/etc/pkgmgr.conf
@@ -1,6 +1,6 @@
 REPO_URL="http://repo.canopsis.org:80"
 REPO_BASE=""
-REPO_VERS="daily"
+REPO_VERS="stable"
 ARCH=$ARCH
 DIST=$DIST
 DIST_VERS=$DIST_VERS
