MongoDB 2.0.2 conf file

--- a/sources/extra/conf/mongodb.conf
+++ b/sources/extra/conf/mongodb.conf
@@ -12,10 +12,11 @@ logpath=@PREFIX@/var/log/mongodb/mongodb.log
 
 logappend=true
 
-bind_ip = 127.0.0.1                                                             
+bind_ip = 127.0.0.1 
 #port = 27017
 
-
+# Disables write-ahead journaling
+# nojournal = true
 
 # Enables periodic logging of CPU utilization and I/O wait
 #cpu = true
@@ -40,10 +41,7 @@ bind_ip = 127.0.0.1
 #   2=R
 #   3=both
 #   7=W+some reads
-#oplog = 0
-
-# Diagnostic/debugging option
-#nocursors = true
+#diaglog = 0
 
 # Ignore query hints
 #nohints = true
@@ -59,7 +57,7 @@ bind_ip = 127.0.0.1
 #notablescan = true
 
 # Disable data file preallocation.
-#noprealloc = true
+noprealloc = true
 
 # Specify .ns file size for new databases.
 # nssize = <size>
@@ -75,7 +73,8 @@ bind_ip = 127.0.0.1
 
 # Replication Options
 
-# in replicated mongo databases, specify here whether this is a slave or master
+# in master/slave replicated mongo databases, specify here whether
+# this is a slave or master
 #slave = true
 #source = master.example.com
 # Slave only: specify a single database to replicate
@@ -84,13 +83,5 @@ bind_ip = 127.0.0.1
 #master = true
 #source = slave.example.com
 
-# Address of a server to pair with.
-#pairwith = <server:port>
-# Address of arbiter server.
-#arbiter = <server:port>
-# Automatically resync if slave data is stale
-#autoresync
-# Custom size for replication operation log.
-#oplogSize = <MB>
-# Size limit for in-memory storage of op ids.
-#opIdMem = <bytes>
+# in replica set configuration, specify the name of the replica set
+# replSet = setname
