Reset prealloc option

--- a/sources/extra/conf/mongodb.conf
+++ b/sources/extra/conf/mongodb.conf
@@ -57,7 +57,7 @@ bind_ip = 127.0.0.1
 #notablescan = true
 
 # Disable data file preallocation.
-noprealloc = true
+#noprealloc = true
 
 # Specify .ns file size for new databases.
 # nssize = <size>
