Update celery schedule feature

--- a/sources/celery/etc/daemon.d/celeryd.conf
+++ b/sources/celery/etc/daemon.d/celeryd.conf
@@ -1,4 +1,4 @@
 START=1
 APP_BIN=~/bin/celeryd
-APP_ARGS="--loglevel=INFO"
+APP_ARGS="--loglevel=INFO -B --schedule=$HOME/var/run/celerybeat-schedule"
 NB_PROC=1
