--- a/sources/packages/snmp2amqp/control
+++ b/sources/packages/snmp2amqp/control
@@ -17,14 +17,16 @@ function pre_install(){
 
 function post_install(){
 	echo "Post-install $NAME $VERSION-$RELEASE ..."
-	SUDOCMD="$HUSER ALL=NOPASSWD: $PREFIX/bin/python $PREFIX/opt/$NAME/$NAME.py 1"
+	SUDOCMD="$HUSER ALL=NOPASSWD: $PREFIX/bin/python $PREFIX/opt/$NAME/$NAME.py"
 	if [ `id -u` -eq 0 ]; then
 		if [ `cat /etc/sudoers | grep $NAME | wc -l` -eq 0 ]; then
 			echo "$SUDOCMD" >> /etc/sudoers
+			sed -i 's/Defaults\tenv_reset/Defaults\t!env_reset/g' /etc/sudoers
 			check_code $? "Impossible to configure sudo"
 		fi
 	else
 		echo " + Please insert '$SUDOCMD' in your sudoers file (/etc/sudoers)"
+		echo " + And change \"Defaults env_reset\" by \"Defaults !env_reset\""
 	fi
 }
 
