Add webcore-libs package

--- a/sources/packages/webcore-libs/control
+++ b/sources/packages/webcore-libs/control
@@ -1,10 +1,10 @@
 #!/bin/bash
 
-NAME="webcore"
+NAME="webcore-libs"
 VERSION=0.1
 RELEASE=1
 DESCRIPTION=""
-REQUIRES="canohome pkgmgr python canolibs wkhtmltopdf webcore-libs"
+REQUIRES="canohome pkgmgr python canolibs wkhtmltopdf"
 
 NO_ARCH=true
 NO_DIST=true
@@ -22,7 +22,6 @@ function post_install(){
 
 function pre_remove(){
 	echo "Pre-remove $NAME $VERSION-$RELEASE ..."
-	service webserver stop || true
 	check_code $?
 }
 
@@ -38,7 +37,6 @@ function pre_update(){
 
 function post_update(){
 	echo "Post-update $NAME $VERSION-$RELEASE ..."
-	service webserver restart
 	check_code $?
 }
 
